# drillapi

./: .gitignore  .inspector-ignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.lambda  README.md  docker-compose.yml  env.example  publiccode.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  inspector-scan-test.yml  lint.yml  publish-ecr.yml  publish-gchr.yml  security-scan.yml  test.yml  update_publiccode.yml
settings_values/: cantons.py  globals.py
src/: app.py  config.py  main.py  services.py
src/drillapi/: app.py  config.py  lambda_handler.py
src/drillapi/cantons_configuration/: cantons.py
src/drillapi/models/: models.py
src/drillapi/routes/: cantons.py  checker.py  drill_category.py
src/drillapi/services/: error_handler.py  processing.py  security.py
src/drillapi/templates/: checker.html
src/routes/: cantons.py  checker.py  drill_category.py
src/services/: error_handler.py  processing.py  security.py  services.py
src/templates/: checker_base.html  checker_item.html  checker_stream.html
tests/: conftest.py  test_checker.py  test_configuration_structure.py  test_drill_category_edge_cases.py  test_drill_suitability.py  test_error_handler.py  test_geoservice_unavailable.py  test_main.py  test_processing.py  test_rate_limiting.py  test_settings.py
tests/data/esri/: identify_fr.json
tests/data/geoadmin/: canton_identify_fr.json  canton_identify_ju.json
tests/data/wms/: getfeatureinfo_ju.gml
