[project]
name = "drillapi"
version = "0.1.12"
description = "drillapi"
authors = [{name = "SFOE", email = "geoinformation@bfe.admin.ch"}]
readme = "README.md"
requires-python = ">=3.14"
keywords = ["drillapi"]
dependencies = [
  "fastapi>=0.138.0",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "mangum>=0.21.0",
  "owslib>=0.35.0",
  "pydantic-settings>=2.14.2",
  "slowapi>=0.1.10",
  "uvicorn>=0.47.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pygments>=2.20.0",
  "requests",
  "respx",
  "pytest-asyncio",
  "ruff>=0.15.18",
]

[tool.coverage.run]
omit = [
  "src/drillapi/__main__.py",
  "src/drillapi/lambda_handler.py",
]

[project.scripts]
drillapi = "drillapi.__main__:main"

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"
